2006-12-29  Brian Bidulock  <bidulock@openss7.org>

	* strutil.spec.in: old rpms hate nested ifs
	* debian/changelog: updated for release
	* strutil.spec.in: changes for successful master build
	* doc/manual/prerequisites.texi: changes for successful master build

2006-12-18  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: change module id base
	* src/drivers/echo.c: add clone minor alias
	* src/drivers/log.c: add clone minor alias
	* src/drivers/nsdev.c: add clone minor alias
	* src/drivers/nuls.c: add clone minor alias
	* src/drivers/pipe.c: add clone minor alias
	* src/drivers/sad.c: add clone minor alias
	* src/drivers/sfx.c: add clone minor alias
	* src/drivers/spx.c: add clone minor alias
	* src/test/test-clone.c: clone directory device names
	* src/test/test-connld.c: clone directory device names
	* src/test/test-echo.c: clone directory device names
	* src/test/test-fifo.c: clone directory device names
	* src/test/test-log.c: clone directory device names
	* src/test/test-nuls.c: clone directory device names
	* src/test/test-pipemod.c: clone directory device names
	* src/test/test-sad.c: clone directory device names
	* src/test/test-sc.c: clone directory device names
	* src/test/test-streams.c: clone directory device names

	* src/drivers/clone.c: updated headers for release
	* src/drivers/fifo.h: updated headers for release
	* src/drivers/log.h: updated headers for release
	* src/drivers/pipe.h: updated headers for release
	* src/include/sys/log.h: updated headers for release
	* src/include/sys/sad.h: updated headers for release
	* src/include/sys/sc.h: updated headers for release
	* src/include/sys/strlog.h: updated headers for release
	* src/lib/gen.c: updated headers for release
	* src/util/insf.c: updated headers for release
	* src/util/strlogd.c: updated headers for release

2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>
